# magi-gui

./: .gitignore  README.md  magi-gui.md  pyproject.toml
.serena/: project.yml
.streamlit/: config.toml
docs/: GOOGLE_AI_STUDIO_GUIDE.md
src/magi_gui/: __init__.py  app.py  main.py  report.py  streaming_adapter.py
src/magi_gui/assets/: style.css
tests/: conftest.py
tests/integration/: test_streamlit.py
tests/unit/: test_app.py  test_main.py  test_rendering.py  test_report.py  test_streaming_adapter.py
