[project]
name = "magi-gui"
version = "0.1.0"
description = "MAGI System GUI Frontend for Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    "magi",
]

[project.scripts]
magi-gui = "magi_gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magi_gui"]

[tool.uv.sources]
magi = { path = "../magi-core", editable = true }
